@@ -4274,6 +4274,9 @@ public class GNUCPPSourceParser extends AbstractGNUSourceCodeParser {
 
         IASTName name = null;
 
+        if (LT(1) == IGCCToken.t__attribute__ && supportAttributeSpecifiers) // if __attribute__ occurs after struct/union/class and before the identifier
+        	__attribute__();
+        
         // class name
         if (LT(1) == IToken.tIDENTIFIER)
             name = createName(name());
